--- a/views/components/nav.html
+++ b/views/components/nav.html
@@ -43,12 +43,11 @@
         </div>
         <div class="navbar-collapse collapse" role="navigation">
             <ul class="nav navbar-nav">
-                <li class="hidden-sm hidden-md"><a href="/teacher_manager">老师管理</a></li>
-                <li><a href="/recommended_manager">推荐推荐</a></li>
-                <li><a href="/order_manager">订单管理</a></li>
-                <li><a href="/message_manager">通知消息管理</a></li>
-                <li><a href="/stat">统计</a></li>
-                <li><a href="/wechat_banner_manager">微信Banner图管理</a></li>
+                <li class="hidden-sm hidden-md"><a href="/teacher_manager">革奴</a></li>
+                <li><a href="/recommended_manager">Linux</a></li>
+                <li><a href="/order_manager">IOS</a></li>
+                <li><a href="/message_manager">ANDROID</a></li>
+                <li><a href="/stat">JAVA</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right hidden-sm">
                 <li>
