--- a/views/components/nav.html
+++ b/views/components/nav.html
@@ -53,11 +53,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand hidden-sm" href="/">GeNu</a>
+            <a class="navbar-brand hidden-sm" href="/">革奴</a>
         </div>
         <div class="navbar-collapse collapse" role="navigation">
             <ul class="nav navbar-nav">
-                <li><a href="#">革奴</a></li>
                 <!--<li><a href="#">Linux</a></li>-->
                 <!--<li><a href="#">IOS</a></li>-->
                 <!--<li><a href="#">ANDROID</a></li>-->
