--- a/views/components/editor.html
+++ b/views/components/editor.html
@@ -12,7 +12,7 @@
             doc.designMode = "on";
             doc.contentEditable = true;
             doc.open();
-            doc.write('<html><head><style>body{margin:3px;word - wrap:break-word;word-break:break-all;} </style></head><body> GoodNessEditor </body></html>');
+            doc.write('<html><head><style>body{margin:3px;word - wrap:break-word;word-break:break-all;border:0px} </style></head><body> GoodNessEditor </body></html>');
             doc.close();
 
         }
@@ -37,7 +37,7 @@
     </p>
 
     <p>
-        <iframe id="editor" width="100%" height="400px" style="border:solid 1px;"></iframe>
+        <iframe id="editor" width="100%" height="400px" style="border:none;"></iframe>
     </p>
     <script type="text/javascript">
         new Editor();
