--- a/views/components/footer.html
+++ b/views/components/footer.html
@@ -1,6 +1,8 @@
+<!--Footer Start -->
 <footer class="footer">
     <div class="container">
         <p>© 2015 Bytesu &nbsp; GeNu is licensed under the
             <a href="http://opensource.org/licenses/MIT">MIT license</a>.</p>
     </div>
 </footer>
+<!--Footer End -->
