--- a/views/components/nav.html
+++ b/views/components/nav.html
@@ -61,17 +61,23 @@
                 <!--<li><a href="#">IOS</a></li>-->
                 <!--<li><a href="#">ANDROID</a></li>-->
                 <!--<li><a href="#">JAVA</a></li>-->
-                <li class="dropdown " index="demo">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-cubes"></i> 笔记&nbsp;<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/editor"><i class="fa fa-plus"></i> 增加新笔记</a></li>
-                    </ul>
-                </li>
+                <!--<li class="dropdown " index="demo">-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-cubes"></i> 编程语言&nbsp;<b class="caret"></b></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="/object-c"><i class="fa fa-plus"></i> Object-c</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right hidden-sm">
                 <li>
-                    <a href="/loginout">退出</a>
+                    <a href="/post/list">归档</a>
                 </li>
+                <li>
+                    <a href="/static/about">关于</a>
+                </li>
+                <!--<li>-->
+                    <!--<a href="/loginout">退出</a>-->
+                <!--</li>-->
             </ul>
         </div>
     </div>
