--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,16 @@
         background: #f3f3f3;;
     }
 </style>
-<br/>
-<br/>
-<br/>
-人生总有些目标需要全力以赴！
+
 <div class="container">
-        <%include ./components/control.html%>
+    <div class="row">
+        <div class="col-xs-9">
+            <!--<%include ./static/about.html %>-->
+
+        </div>
+        <div class="col-xs-3">
+
+        </div>
+    </div>
+
 </div>
