--- a/views/script/syntaxHighlighter.html
+++ b/views/script/syntaxHighlighter.html
@@ -1,12 +1,12 @@
-<!--<link rel="stylesheet" href="/SyntaxHighlighter/styles/shCore.css"/>-->
-<!--<link rel="stylesheet" href="/SyntaxHighlighter/styles/shCoreDefault.css"/>-->
+<!--<css rel="stylesheet" href="/SyntaxHighlighter/styles/shCore.css"/>-->
+<!--<css rel="stylesheet" href="/SyntaxHighlighter/styles/shCoreDefault.css"/>-->
 <!--<script src="/SyntaxHighlighter/scripts/shCore.js"></script>-->
 <!--<script src="/SyntaxHighlighter/scripts/shBrushJScript.js"></script>-->
 
-<!--<link rel="stylesheet" href="../bower_components/SyntaxHighlighter/styles/shCore.css"/>-->
+<!--<css rel="stylesheet" href="../bower_components/SyntaxHighlighter/styles/shCore.css"/>-->
 <!--<script src="../bower_components/SyntaxHighlighter/scripts/shCore.js"></script>-->
 <!--<script src="../bower_components/SyntaxHighlighter/scripts/shBrushJScript.js"></script>-->
-<!--<link rel="stylesheet" href="../bower_components/SyntaxHighlighter/styles/shCoreDefault.css"/>-->
+<!--<css rel="stylesheet" href="../bower_components/SyntaxHighlighter/styles/shCoreDefault.css"/>-->
 
 <link rel="stylesheet" href="/lib/syntaxhighlighter_3.0.83/styles/shCore.css/"/>
 <link rel="stylesheet" href="/lib/syntaxhighlighter_3.0.83/styles/shCoreDefault.css/"/>
