--- a/views/components/control.html
+++ b/views/components/control.html
@@ -1,12 +1,3 @@
-<html>
-<header>
-    <title>Demo</title>
-    <script src="/jquery/dist/jquery.min.js"></script>
-
-</header>
-<body>
-<!--<link rel="stylesheet" href="/test.css"/>-->
-
 <style>
     input:focus,select:focus,textarea:focus,button:focus {
         outline: none
@@ -238,6 +229,11 @@
         transform: rotate(180deg);
         animation-fill-mode: forwards
     }
+    ul.filter-wrapper * {
+        -webkit-box-sizing: content-box;
+        -moz-box-sizing: content-box;
+         box-sizing: content-box;
+    }
 
 </style>
 <!-- 公司卡片 -->
@@ -419,15 +415,13 @@
     CtrlTool.prototype.init = function(){
         this.$btnMore.hover(function(){
             $(this).closest('li').siblings('div').fadeIn();
-        },function(){
-            $(this).closest('li').siblings('div').hide();
-        })
-    }
+        },function(){});
+        this.$btnMore.closest('li').siblings('div').hover(function(){},function(){
+            $(this).hide();
+        });
+    };
 
     $(function(){
         new CtrlTool();
     })
 </script>
-
-</body>
-</html>
