--- a/views/tmpl.html
+++ b/views/tmpl.html
@@ -12,21 +12,22 @@
 </head>
 <body>
 <%if(typeof(LOGIN) == 'undefined'){ %>
+<%include ./components/nav.html %>
+<br/>
 <!--<nav class="navbar navbar-inverse navbar-static-top">-->
     <!--<a class="navbar-brand" href="#">学院派后台管理</a>-->
     <!--<ul class="nav nav-pills">-->
         <!--<li class="nav-item active">-->
-            <!--<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
+            <!--<a class="nav-css" href="#">Home <span class="sr-only">(current)</span></a>-->
         <!--</li>-->
         <!--<li class="nav-item">-->
-            <!--<a class="nav-link" href="#">About</a>-->
+            <!--<a class="nav-css" href="#">About</a>-->
         <!--</li>-->
         <!--<li class="nav-item">-->
-            <!--<a class="nav-link" href="#">Contact</a>-->
+            <!--<a class="nav-css" href="#">Contact</a>-->
         <!--</li>-->
     <!--</ul>-->
 <!--</nav>-->
-<% include ./components/nav.html %>
 
 <br/>
 <br/>
