--- a/views/post/list.html
+++ b/views/post/list.html
@@ -1,5 +1,10 @@
-<h3>
-    归档列表
-</h3>
-<%- partial('item', {posts:posts}) %>
-<%- include ../components/pager.html %>
+<div class="container">
+    <div class="col-xs-12">
+        <h3>
+            归档列表
+        </h3>
+
+        <%include ./../components/pager.html %>
+
+    </div>
+</div>
