--- a/views/post/item.html
+++ b/views/post/item.html
@@ -1,7 +1,9 @@
-
 <ul>
-
     <% for(var i=0; i<posts.length;i++) {%>
-    <li><%= posts[i].title %></li>
+        <li>
+            <a href="#"><%= posts[i].title %></a>
+        </li>
     <% } %>
 </ul>
+
+
