--- a/views/index.html
+++ b/views/index.html
@@ -7,12 +7,9 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-9">
-            <!--<%include ./static/about.html %>-->
-
+            <%include ./components/loading.html %>
         </div>
         <div class="col-xs-3">
-
         </div>
     </div>
-
 </div>
