--- a/views/static/about.html
+++ b/views/static/about.html
@@ -8,6 +8,79 @@
     <li>
         人的强大，除了自信，坚持，还有一点非常重要- 学会享受孤独 。无论是否有人理解体恤你的悲伤，你都必须要学会与自己交流 。孤独看起来是一个人独处，实则是自己与自己的沟通 。‘孤独’ 另一个名字也叫 ‘找自己’ 。——刘 同
     </li>
+    <li>
+        惟有身处卑微的人，最有机缘看到世态人情的真相。一个人不想攀高就不怕下跌，也不用倾轧排挤，可以保其天真，成其自然，潜心一志完成自己能做的事。 —— 杨绛
+    </li>
+    <li>
+        人是无法做到换位思考的，因为思想、经历、感官、全都不一样，就像我说大海很漂亮，你却说淹死过很多人。
+    </li>
+    <li>
+        Perfection'snot attainable, but if we chase it we can catch excellence.
+
+
+        我们无法做到完美，但追求完美能让人卓越。
+    </li>
+    <li>
+        Life isn't about finding yourself. Life is about creating yourself.
+
+
+        生活的意义不是发现自我，而是创造自我。
+    </li>
+
+    <li>
+        The hardest thing is to take less when you can get more.
+
+
+        世上最难的事莫过于能取千金却只索半厘。
+    </li>
+    <li>
+        Every noble work is at first impossible.
+
+
+        伟大的事业在最初都看似不可完成。
+    </li>
+    <li>
+        Always do your best. What you plant now, you will harvest later.
+
+
+        昔日有所耕，来日必有获。尽力而为之，不枉平日功。
+    </li>
+    <li>
+        There is a kind of beauty in imperfection.
+
+
+        有一种美叫不完美
+    </li>
+    <li>
+        The ability to take a joke,not make one, proves that you have a sense of humor. ?
+
+
+        幽默并非在于调侃他人，而是能否经得住调侃
+    </li>
+    <li>
+        It does not matter how slowly you go as long as you do not stop.
+
+
+        只要不停下，慢点有什么关系
+    </li>
+    <li>
+        Beauty without expression is boring.
+
+
+        面无表情的美丽有点无趣。
+    </li>
+    <li>
+        Be true to your work, your word, and your friend.
+
+
+        诚于业，重于诺，忠于友。
+    </li>
+    <li>
+        Some of us think holding on makes us strong; but sometimes it is letting go.
+
+
+        有人觉得是坚持让人强大，但有时放手才是
+    </li>
 </ul>
 <br/>
 <br/>
