--- a/views/components/footer.html
+++ b/views/components/footer.html
@@ -1,8 +1,7 @@
 <!--Footer Start -->
 <footer class="footer">
     <div class="container">
-        <p>© 2015 Bytesu &nbsp; GeNu is licensed under the
-            <a href="http://opensource.org/licenses/MIT">MIT license</a>.</p>
+        <p>© 2015 Bytesu &nbsp; 革奴 版权所有.</p>
     </div>
 </footer>
 <!--Footer End -->
