--- a/views/script/_G_.html
+++ b/views/script/_G_.html
@@ -1,4 +1,4 @@
-<script src="./../js/g/_GLOBAL.js"></script>
+<script src="/js/g/_GLOBAL.js"></script>
 <style>
     .container{
         max-width:1200px
