--- a/views/components/nav.html
+++ b/views/components/nav.html
@@ -70,10 +70,10 @@
             </ul>
             <ul class="nav navbar-nav navbar-right hidden-sm">
                 <li>
-                    <a href="/post/list">归档</a>
+                    <a href="/p/post/list">归档</a>
                 </li>
                 <li>
-                    <a href="/static/about">关于</a>
+                    <a href="/p/static/about">关于</a>
                 </li>
                 <!--<li>-->
                     <!--<a href="/loginout">退出</a>-->
