--- a/views/sujiaxiaoguan-menu/coming.html
+++ b/views/sujiaxiaoguan-menu/coming.html
@@ -29,10 +29,23 @@
 </head>
 <body>
     <div class="resturant-in">
-        <div class="resturant－item resturant-menu"><a href="/p/sujiaxiaoguan-menu/index.html">菜单</a></div>
+        <div class="resturant－item resturant-menu">
+            <a href="/p/sujiaxiaoguan-menu/index.html">菜单</a>
+        </div>
         <div class="resturant－item resturant-cost"><a href="/p/sujiaxiaoguan-menu/cost.html">成本</a></div>
         <div class="resturant－item resturant-order"><a href="/p/sujiaxiaoguan-menu/index.html">下单</a></div>
         <div class="resturant－item resturant-menu"><a href="/p/sujiaxiaoguan-menu/stat.html">统计</a></div>
+        <div class="resturant－item resturant-menu">
+            <a href="/p/sujiaxiaoguan-menu/add.html" style="
+    width: 50%;
+    display: inline-block;
+">增加菜类</a>
+            <a href="/p/sujiaxiaoguan-menu/add.html" style="
+    width: 48%;
+    display: inline-block;
+    border-left: 1px solid #FFF;
+">增加菜品</a>
+        </div>
     </div>
 </body>
 </html>
